enable compact headers